# bazel-cli-example

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE
tools/: bazel
tools/aws/: BUILD.bazel  awsconfig.ini  login.sh  logout.sh
tools/cli/: BUILD.bazel  ctlptl.sh  tilt.sh
tools/gcp/: BUILD.bazel  login.sh  logout.sh
